<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id11965252.com.artorder.View.AddOrderFormActivity">


    <EditText
        android:id="@+id/order_form_client_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_edittext"
        android:inputType="text"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/order_form_phone_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/order_form_description_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/order_form_quote_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quote"
        android:inputType="numberDecimal" />


    <TextView
        android:id="@+id/order_form_create_date_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_date_value" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/due_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addorderformactivity_due_number"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="number"
            android:text="@string/zero" />

        <Spinner
            android:id="@+id/addorderformactivity_due_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/order_form_creator_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_value" />

    <ProgressBar
        android:id="@+id/addorderformactivity_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/order_form_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />


    <Button
        android:id="@+id/order_form_place_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order" />

</LinearLayout>
